Fixes for cocoonJS

--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
-html {
-    -ms-touch-action: manipulation;
-    touch-action: manipulation;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-body {
-    margin: 0;
-    padding: 0
+html, body {
+    overflow: hidden;
 }
