--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,8 @@
 html, body {
     overflow: hidden;
 }
+
+@font-face {
+    font-family: "EarlyGameBoy";
+    src: url("../assets/fonts/Early GameBoy.ttf");
+}
